# 1337-Noms-The-Hacker-Cookbook

./: .gitignore  CREDITS.md  README.md  ollama.json
.admin/: Makefile.am  bootstrap.sh  configure.ac
.admin/container/: Containerfile
.admin/src/: generate_bom.py  populate_frontmatter.py  requirements.txt
.admin/templates/: recipe_skel.md
.gemini/: .geminiignore  CONTEXT.md  GEMINI.md
.github/: .markdownlint.json  PULL_REQUEST_TEMPLATE.md
APPETIZERS/: Ajn_point_reyes_brussels_sprout_salad.md  boredsillys_angry_guacamole.md  diff_asian_chicken_wings.md  sl3dge_bone_marrow_mushrooms_and_broccolini.md  theDevilsVoice_street_corn.md  v3rtig0_Mashed_Potato_Croquettes.md
BREAKFAST/: Marler_quick_migas.md  aaron_the_king_hashbrownpatty_bacon_sandwich.md  n1cfury_AES.md
COOKWARE/: aaron_the_king_tea_tasting_can.md
DESSERTS/: Breaking_Bad_Blackhat_Brownies.md  TailPufft_Cream_Cheese_Roll_Out_Cookies_With_Orange.md  TailPufft_Vegan_Carrot_Cake.md  TailPufft_Whiskey_caramel_Apple_Hand_Pies.md  TunnyTraffic_Foolproof_Victoria_Sponge.md  WireGhost_Key_Lime_Pyrewall.md  acai_bowl.md  keto_marbled_turtle_cheesecake.md  wishperactual_peppernuts.md
DRINKS/: Dual_Core-Faderade.md  Dual_Core-Macaulay.md  Dual_Core-Plausible_Deniability.md  Dual_Core-Vodka_Redbull.md  ashmastaflash-grandpappys_turnt_juice.md  b1ack0wl-holiday-drink.md  iHeartMalwares_THE_Purple_Drink.md  iHeartMalwares_rocket_league.md  iHeartMalwares_sweet_tart.md  moonbas3_new_fashioned.md  tiptone-mexican-martini.md
ENTREES/: 0xrnair_monster_chicken_burrito.md  BenHeise_Bangers_and_Mash.md  Dual_Core-Mom-s_Spaghetti.md  aaron_the_king_dishwasher_salmon.md  boredsillys_baked_gringo.md  boredsillys_excuse_to_eat_bacon_avocado_sandwich.md  da_667s_cheesy_chicken_chili.md  danger_chili_permission_check.md  deviant_ollam_sous_vide_steak.md  dis0wn-TwoCheese_Bacon_Potato_and_Cauliflower_Soup.md  elegin_balsamic_tempeh.md  elegin_cauliflower_steaks.md  elegin_chickpea_tacos.md  elegin_one_pot_thai_peanut.md  hack_my_chili_2026_kamikazi_val_s_chicken_chili.md  hack_my_chili_2026_madstringer_7_pepper_pork_green_chili.md  hack_my_chili_2026_oifhax_el_pastor.md  hack_my_chili_2026_oifhax_el_pastor_w_bison_and_chorizo.md  hack_my_chili_2026_oifhax_test_credits_add.md  hardwaterhacker_crispy_parmesan_baked_walleye.md  hardwaterhacker_grilled_cedar_plank_salmon.md  iHeartMalware_NC_Pulled_Pork.md  miss_gif_crock-pot-meatshield.md  moonbas3_bbq_ribs.md  moonbas3_mississippi_pot_roast.md  panaderos_sausage_balls.md  rahlquist_slow_cooker_chorizo_black_bean_stew.md  sl3dges_low-carb_sticky_pork_belly.md  slufs_seared_tuna_pasta.md  travelars_southwest_porkchops.md  wimzkl_caramelized-onion-mushroom-stuffin.md  wireheadlance_grandmothers_chicken_and_gravy.md
SAUCES/: elegin_vegan_tarter_sauce.md  iHeartMalware_buffalo_sauce.md  jcase_LowCarb_Alabama_white_BBQ_sauce.md  jcase_LowCarb_NorthCarolina_BBQ_sauce.md
SIDES/: dis0wn-Whiskey_Cranberry_Brussel_Sprouts.md  gr4vy_corn_mac_n_cheese.md  iHeartMalware_fermented_cranberry_relish.md  iHeartMalware_fermented_sauerkraut.md  thedevilsvoice_jangajji.md
SNACKS/: WireGhost_Eclectic_Freedom_Fries.md  aaron_the_king-chicken_parm_nachos.md  (+2 more)
(+2 files in other folders)
