AC_PREREQ([2.71])
AC_INIT([hacker-cookbook], [1.0], [smoooth.y62wj@passmail.net], [hacker-cookbook], [https://github.com/pale-shadow/1337-Noms-The-Hacker-Cookbook])
AC_CONFIG_MACRO_DIR([config/m4])
AC_CONFIG_AUX_DIR([config])

AC_MSG_NOTICE([build directory: $ac_pwd])
AC_SUBST([WORKDIR], [$ac_pwd])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_COMMANDS([franklin-build],
 [echo "(⊃｡•‿•｡)⊃━⭑･ﾟﾟ･*:༅｡.｡༅:*ﾟ:*:✼✿ Configuring for $mypkgname ☽༓･*˚⁺‧"],
 [mypkgname=$PACKAGE_NAME])

# Checks for programs.
AC_PATH_PROG([PANDOC], [pandoc], [na])
AC_PATH_PROG([SHFMT], [shfmt], [na])

# Minimum version of Python
AM_PATH_PYTHON([3.9])

# LaTeX tooling checks
AC_LATEX_CLASS_ARTICLE
AC_LATEX_CLASS_BOOK
AC_LATEX_CLASS_REPORT
AC_LATEX_PACKAGE_AMSMATH
AC_LATEX_PACKAGE_FONTENC
AC_PROG_DVIPDF
AC_PROG_DVIPS
AC_PROG_FIG2DEV
AC_PROG_GNUPLOT
AC_PROG_MF
AC_PROG_LATEX
AC_PROG_BIBTEX
AC_PROG_PDFLATEX
AC_PROG_PS2PDF
dnl AC_PROG_LATEX2HTML
dnl AC_PROG_LATEX2MAN
AC_PROG_MAKEINDEX
dnl AC_PROG_JPEG2PS
AC_PROG_MKTEXPK
AC_PROG_TEXHASH
AC_PROG_KPSEWHICH
dnl AC_TEXMF_PATH
AC_PROG_PNGTOPNM
AC_PROG_PNMTOPS
AC_PROG_JPEGTOPNM
dnl AC_PROG_LATEX2PNG
dnl AC_PROG_LATEX2RTF
# AC_PROG_PSBOOK
#AC_PROG_PSNUP
#AC_PROG_PSSELECT
#AC_PROG_PSRESIZE
AC_PROG_DVIBOOK

AC_CONFIG_FILES([
  Makefile
  latex/Makefile
])

AC_OUTPUT